=== 1.1 GA (v 1.1.0.2), 2012-04-22, NH 3.3 GA ===

** Bug
* [NHE-66] - Support for custom PrimitiveType classes
* [NHE-69] - Non audited collection throws if in a <join>

** Improvement
* [NHE-67] - Type safe way configuration of properties


*** Breaking changes ***
*
* -- ConfigurationKey --
* nhConf.SetProperty(ConfigurationKey.StoreDataAtDelete, "true") no longer supported.
* Choose either...
* nhConf.SetProperty("nhibernate.envers.store_data_at_delete", "true");
* nhConf.SetEnversProperty(ConfigurationKey.StoreDataAtDelete, true);
* ConfigurationKey.StoreDataAtDelete.SetUserValue(nhConfiguration, true);



=== 1.1 CR1 (v 1.1.0.1), 2012-03-12, NH 3.3 CR1 ===

** Bug
[NHE-40] - Only add RevInfo table if audited types exists
[NHE-41] - Support auditing of <properties>
[NHE-42] - Many-to-many with base class throws NonUniqueException when persisted
[NHE-43] - Don't assume session is open when transaction is completed
[NHE-44] - Delete + Save on entity with no mod shouldn't trigger audit
[NHE-45] - Allow nullable, unidirectional one-to-one mapping
[NHE-46] - Problem with one to many relation with subclass of a base class
[NHE-47] - Support composite-id with custom type
[NHE-48] - Components having properties with default values 
[NHE-49] - Mixing <join> and <subclass> causes crash
[NHE-51] - Support quoted mapped columns (reserved sql keywords)
[NHE-52] - Can't find class attributes on non mapped base types
[NHE-53] - Correcting configuration of base classes
[NHE-54] - User defined Envers schema/catalog + <subclass> causes crash
[NHE-57] - Possible to have non audit entities even if base classes are audited
[NHE-59] - Support scale=0
[NHE-63] - Memory leaks in envers configuration

** Improvement
[NHE-35] - Track entity names in a revision
[NHE-36] - Implement support of AuditJoinTable/AuditTable attribute functionality with fluent interface
[NHE-58] - Enable query for changed properties

** Patch