@@ -1,3 +1,12 @@
+=== vNext ===
+
+*** Breaking changes ***
+* ----- ConfigurationKey.CollectionProxyMapperFactory changed----
+* ICollectionProxyMapperFactory renamed to ICollectionMapperFactory
+* nhibernate.envers.collection_proxy_mapper_factory renamed to nhibernate.envers.collection_mapper_factory
+* ConfigurationKey.CollectionProxyMapperFactory renamed to ConfigurationKey.CollectionMapperFactory
+* ---------------------------------------------------------------
+
 === 1.1 GA (v 1.1.0.2), 2012-04-22, NH 3.3 GA ===
 
 ** Bug
